--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Marco Da Silva</title>
 </head>
 <body class="body">
+
     <header class="screen" id="haut">
         <h1 class="animation autoText"></h1>
         <nav class="navHeader bDesktop12 desktop12 lDesktop12 bTablet12">
@@ -22,6 +23,9 @@
             </ul>
         </nav>
         <div class="bgImage bDesktop12 desktop12 lDesktop12 bTablet12 tablet12 phone12">
+        </div>
+        <div class="dlCv">
+            <a href="img/marcoDaSilvaCv.pdf"><img class="imgDlCv imgResp" src="img/dl.png" alt="image lien de téléchargement"></a>
         </div>
     </header>
 
@@ -43,8 +47,8 @@
                         <h3 class="subTitle yellowFont">Marco Da Silva</h3>
                         <h4>Développeur Web junior</p>
                     </div>
-                    <p class="textJustify">Admis à l'EPSI, école d'ingénierie informatique, de Bordeaux en parcours devOps, je recherche une Alternance pour la rentrée de Septembre 2020.</p>
-                    <p class="textJustify">Récemment détenteur d'un diplôme développeur web et web mobile, titre RNCP niveau III (Bac +2).</p>
+                    <p class="textJustify">Admis à l'<span class="yellowFont">EPSI</span>, école d'ingénierie informatique, de Bordeaux en parcours <span class="yellowFont">devOps</span>, je recherche une <span class="yellowFont">alternance</span> pour la rentrée de Septembre 2020.</p>
+                    <p class="textJustify">Récemment détenteur d'un diplôme <span class="yellowFont">développeur web et web mobile</span>, titre RNCP niveau III (Bac +2).</p>
                     <p class="textJustify">Appliqué, curieux et déterminé je suis très motivé pour partager avec vous une belle histoire professionnelle main dans la main.</p>
                     <p class="textJustify">Fort de ma formation intensive à La Piscine, à Mérignac (33), et de mon apprentissage en auto-didacte je suis prêt à relever tous les challenges en équipe qu'on pourrait me confier toujours dans la bonne humeur.</p>
                 </div>
@@ -170,33 +174,22 @@
                     <img class="imgResp" src="img/logoMarco.png" alt="logo du site">
                 </div>
                 <ul class="bDesktop3 desktop3 lDesktop3 bTablet3 tablet12 phone12">
-                    <li><a href="">Mentions Légales</a></li>
+                    <li><a href="legal.html">Mentions Légales</a></li>
                     <li><a class="backHaut" href="#haut">Retour en haut</a></li>
                 </ul>
             </nav>
         </div>
     </footer>
 
-
-
-
-
-
-
-
-
-
-
-
     <div class="menuResp">
         <ul class="clic">
             <li><a href="#who">Qui suis-je ?</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#portfolio">Projets</a></li>
             <li><a href="#cv">CV</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="plan.html">Plan du site</a></li>
-            <li><a href="mentions.html">Mentions légales</a></li>
-            <li><a href="tel:0628542231">06 28 54 22 31</a></li>
+            <li><a class="yellowFont" href="tel:0628542231">Téléphoner</a></li>
+            <li><a class="yellowFont" href="mailto:tdasilva.marco@gmail.com">Envoyer un mail</a></li>
+            <li><a href="legal.html">Mentions légales</a></li>
         </ul>
     </div>
     <script type="text/javascript" src="scripts/index.js"></script>
