--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 
     <h1 class="textCenter portfolioTitle">Projets</h1>
 
-    <main class="screen bgColor sideNavRel2" id="leymarie">
+    <main class="screen bgColor2 sideNavRel2" id="leymarie">
         <div class="sideNav2">
             <a href="#leymarie"><p class="where"></p></a>
             <a href="#redac"><p></p></a>
@@ -36,20 +36,21 @@
             <h2 class="portfolioTitles yellowFont textCenter">Blog Leymarie</h2>
             <div class="displayFlexBetween flexWrap">
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Conception full-stack d'un blog sous Symfony</p>
-                    <p>Rédaction d'un dossier de projet</p>
-                    <p>Création d'un logo</p>
-                    <p>Apprentissage auto-didacte du javascript vanilla</p>
-                    <p>Complétion du tuto "Morpion" React.js</p>
+                    <p>Création d’un cahier des charges</p>
+                    <p>Conception d’une base de données liée aux besoins <span class="yellowFont">(MCD, MLD)</span></p>
+                    <p>Création d’une charte graphique et d’un logo</p>
+                    <p>Maquettage du site <span class="yellowFont">(FIGMA)</span></p>
+                    <p>Conception Back-end <span class="yellowFont">(Framework SYMFONY avec PHPSTORM, SQL)</span></p>
+                    <p>Intégration Front-end après retours client <span class="yellowFont">(HTML, SASS, TWIG)</span></p>
                 </div>
                 <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <img class="imgResp" src="img/leymarie.png" alt="portrait de marco da silva">
+                    <img class="sizeImgPort imgResp" src="img/leymarie.png" alt="portrait de marco da silva">
                 </div>
             </div>
         </div>
     </main>
 
-    <section class="screen bgColor2 sideNavRel2" id="redac">
+    <section class="screen bgColor sideNavRel2" id="redac">
         <div class="sideNav2">
             <a href="#leymarie"><p></p></a>
             <a href="#redac"><p class="where"></p></a>
@@ -64,20 +65,22 @@
                     <img class="imgResp" src="img/dossier.PNG" alt="portrait de marco da silva">
                 </div>
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Conception full-stack d'un blog sous Symfony</p>
-                    <p>Rédaction d'un dossier de projet</p>
-                    <p>Création d'un logo</p>
-                    <p>Apprentissage auto-didacte du javascript vanilla</p>
-                    <p>Complétion du tuto "Morpion" React.js</p>
+                    <p>Préparation de la structure du dossier</p>
+                    <p>Liste des compétences couvertes</p>
+                    <p>Utilisation de l'outil photoshop pour les images</p>
+                    <p>Utilisation de l'outil <span class="yellowFont">inDesign</span> pour la rédaction</p>
+                    <p>Présentation des <span class="yellowFont">fonctionnalités et parcours utilisateur</span></p>
+                    <p>Focus sur les fonctionnalités intéressantes (code)</p>
+                    <p>Synthèse</p>
                     <div class="btnAlign">
-                        <p class="btn"><a target="_blank" href="img/marcoDaSilvaDossier.pdf">télécharger le dossier</a></p>
+                        <p class="btn"><a target="_blank" href="img/marcoDaSilvaDossier.pdf">Télécharger le dossier</a></p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="screen bgColor sideNavRel2" id="createLogo">
+    <section class="screen bgColor2 sideNavRel2" id="createLogo">
         <div class="sideNav2">
             <a href="#leymarie"><p></p></a>
             <a href="#redac"><p></p></a>
@@ -86,23 +89,23 @@
             <a href="#react"><p></p></a>
         </div>
         <div class="container">
-            <h2 class="portfolioTitles yellowFont textCenter">Création d'un logo</h2>
+            <h2 class="portfolioTitles yellowFont textCenter">Création de logo</h2>
             <div class="displayFlexBetween flexWrap">
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Conception full-stack d'un blog sous Symfony</p>
-                    <p>Rédaction d'un dossier de projet</p>
-                    <p>Création d'un logo</p>
-                    <p>Apprentissage auto-didacte du javascript vanilla</p>
-                    <p>Complétion du tuto "Morpion" React.js</p>
+                    <p>Visualisation des couleurs utilisables (respectant ma charte graphique)</p>
+                    <p>Recherche de logos fonctionnels</p>
+                    <p>Utilisation de mes initiales pour un logo simple et reconnaissable</p>
+                    <p>Imbriquation d'un slogan sur ce même logo</p>
+                    <p>Dessin sur papier puis demande à un graphiste <span class="yellowFont">(Nina Levesque)</span></p>
                 </div>
                 <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <img class="imgResp" src="img/logo.png" alt="portrait de marco da silva">
+                    <img class="imgResp" src="img/logosPortfolio.png" alt="portrait de marco da silva">
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="screen bgColor2 sideNavRel2" id="javascript">
+    <section class="screen bgColor sideNavRel2" id="javascript">
         <div class="sideNav2">
             <a href="#leymarie"><p></p></a>
             <a href="#redac"><p></p></a>
@@ -117,17 +120,17 @@
                     <img class="imgResp sizeImgPort" src="img/toutjavascript.jpeg" alt="portrait de marco da silva">
                 </div>
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Conception full-stack d'un blog sous Symfony</p>
-                    <p>Rédaction d'un dossier de projet</p>
-                    <p>Création d'un logo</p>
-                    <p>Apprentissage auto-didacte du javascript vanilla</p>
-                    <p>Complétion du tuto "Morpion" React.js</p>
+                    <p>Achat du livre <span class="yellowFont">"TOUT JAVASCRIPT</span> par Olivier Hondermarck</p>
+                    <p>Lecture de chaque chapitres jusqu'à compréhension et annotations</p>
+                    <p>Essais pratiques</p>
+                    <p>Envie d'appronfidessement du langage</p>
+                    <p>Recherche de tutos afin de mieux comprendre la mise en pratique</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="screen bgColor sideNavRel2" id="react">
+    <section class="screen bgColor2 sideNavRel2" id="react">
         <div class="sideNav2">
             <a href="#leymarie"><p></p></a>
             <a href="#redac"><p></p></a>
@@ -139,11 +142,11 @@
             <h2 class="portfolioTitles yellowFont textCenter">Tuto React.js (Morpion)</h2>
             <div class="displayFlexBetween flexWrap">
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Conception full-stack d'un blog sous Symfony</p>
-                    <p>Rédaction d'un dossier de projet</p>
-                    <p>Création d'un logo</p>
-                    <p>Apprentissage auto-didacte du javascript vanilla</p>
-                    <p>Complétion du tuto "Morpion" React.js</p>
+                    <p>Recherche d'un framework après la lecture du livre</p>
+                    <p>Choix du framework front React.js</p>
+                    <p>Recherche de la documentation</p>
+                    <p><span class="yellowFont">Complétion du tuto</span> de la documentation</p>
+                    <p><span class="yellowFont">Création d'un jeu</span> Morpion</p>
                 </div>
                 <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <img class="imgResp sizeImgPort" src="img/morpion.png" alt="portrait de marco da silva">
@@ -167,34 +170,24 @@
                     <img class="imgResp" src="img/logoMarco.png" alt="logo du site">
                 </div>
                 <ul class="bDesktop3 desktop3 lDesktop3 bTablet3 tablet12 phone12">
-                    <li><a href="">Mentions Légales</a></li>
+                    <li><a href="legal.html">Mentions Légales</a></li>
                     <li><a class="backHaut" href="#haut">Retour en haut</a></li>
                 </ul>
             </nav>
         </div>
     </footer>
 
-
-
-
-
-
-
-
-
-
-
-
     <div class="menuResp">
         <ul class="clic">
-            <li><a href="#who">Qui suis-je ?</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#cv">CV</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="plan.html">Plan du site</a></li>
-            <li><a href="mentions.html">Mentions légales</a></li>
-            <li><a href="tel:0628542231">06 28 54 22 31</a></li>
+            <li><a href="index.html #who">Qui suis-je ?</a></li>
+            <li><a href="index.html #portfolio">Projets</a></li>
+            <li><a href="index.html #cv">CV</a></li>
+            <li><a href="index.html #contact">Contact</a></li>
+            <li><a class="yellowFont" href="tel:0628542231">Téléphoner</a></li>
+            <li><a class="yellowFont" href="mailto:tdasilva.marco@gmail.com">Envoyer un mail</a></li>
+            <li><a href="legal.html">Mentions légales</a></li>
         </ul>
     </div>
+    <script type="text/javascript" src="scripts/portfolio.js"></script>
 </body>
 </html>
