--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="Développeur Web et web Mobile junior en recherche d'alternance Bachelor 3 à l'Epsi">
+    <meta property="og:image" content="http://www.marcodasilva-dev.com/img/logo.png" />
+    <link rel="icon" type="image/png" href="img/logo.png" />
     <link type="text/css" href="styles/style.css" rel="stylesheet">
     <title>Marco Da Silva</title>
 </head>
 <body class="body">
 
     <header class="screen" id="haut">
-        <h1 class="animation autoText"></h1>
+        <div class="animation displayFlexCenter bDesktop12 desktop12 lDesktop12 bTablet12 tablet12 phone12">
+            <h1 class="autoText"></h1>
+        </div>
         <nav class="navHeader bDesktop12 desktop12 lDesktop12 bTablet12">
             <div class="burger tablet1 phone1">
                 <img class="burgerPng imgResp" src="img/burger.png" alt="icône menu burger">
@@ -25,7 +30,11 @@
         <div class="bgImage bDesktop12 desktop12 lDesktop12 bTablet12 tablet12 phone12">
         </div>
         <div class="dlCv">
-            <a href="img/marcoDaSilvaCv.pdf"><img class="imgDlCv imgResp" src="img/dl.png" alt="image lien de téléchargement"></a>
+            <a href="img/marcoDaSilvaCv.pdf">
+                <div>
+                    <img class="imgDlCv imgResp" src="img/dl.png" alt="image lien de téléchargement">
+                </div>
+            </a>
         </div>
     </header>
 
@@ -171,7 +180,7 @@
                     <li><a href="#contact"><li>Contact</a></li>
                 </ul>
                 <div class="bDesktop1 desktop1 lDesktop1 bTablet1">
-                    <img class="imgResp" src="img/logoMarco.png" alt="logo du site">
+                    <a href="index.html"><img class="imgResp" src="img/logoMarco.png" alt="logo du site"></a>
                 </div>
                 <ul class="bDesktop3 desktop3 lDesktop3 bTablet3 tablet12 phone12">
                     <li><a href="legal.html">Mentions Légales</a></li>
