--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="Développeur Web et web Mobile junior en recherche d'alternance Bachelor 3 à l'Epsi">
+    <meta property="og:image" content="http://www.marcodasilva-dev.com/img/logo.png" />
+    <link rel="icon" type="image/png" href="img/logo.png" />
     <link type="text/css" href="styles/style.css" rel="stylesheet">
     <title>Projets</title>
 </head>
@@ -13,11 +16,11 @@
                 <img class="burgerPng imgResp" src="img/burger.png" alt="icône menu burger">
             </div>
             <ul class="tablet3 phone3">
-                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html #who">Qui suis-je ?</a></li>
-                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html #portfolio">Projets</a></li>
+                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html#who">Qui suis-je ?</a></li>
+                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html#portfolio">Projets</a></li>
                 <li class="bDesktop1 desktop1 lDesktop1 bTablet2 tablet12"><a href="index.html"><img class="imgResp" src="img/logo.png" alt="logo du site"></a></li>
-                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html #cv">CV</a></li>
-                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html #contact">Contact</a></li>
+                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html#cv">CV</a></li>
+                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -27,13 +30,13 @@
     <main class="screen bgColor2 sideNavRel2" id="leymarie">
         <div class="sideNav2">
             <a href="#leymarie"><p class="where"></p></a>
-            <a href="#redac"><p></p></a>
             <a href="#createLogo"><p></p></a>
             <a href="#javascript"><p></p></a>
             <a href="#react"><p></p></a>
+            <a href="#gameboard"><p></p></a>
         </div>
         <div class="container">
-            <h2 class="portfolioTitles yellowFont textCenter">Blog Leymarie</h2>
+            <h2 class="portfolioTitles yellowFont textCenter">Création d'un blog sous Symfony 5</h2>
             <div class="displayFlexBetween flexWrap">
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <p>Création d’un cahier des charges</p>
@@ -42,6 +45,10 @@
                     <p>Maquettage du site <span class="yellowFont">(FIGMA)</span></p>
                     <p>Conception Back-end <span class="yellowFont">(Framework SYMFONY avec PHPSTORM, SQL)</span></p>
                     <p>Intégration Front-end après retours client <span class="yellowFont">(HTML, SASS, TWIG)</span></p>
+                    <p>Rédaction d'un dossier de projet contenant toutes les étapes et code</p>
+                    <div class="btnAlign">
+                        <p class="btn"><a target="_blank" href="img/marcoDaSilvaDossier.pdf">Télécharger le dossier</a></p>
+                    </div>
                 </div>
                 <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <img class="sizeImgPort imgResp" src="img/leymarie.png" alt="portrait de marco da silva">
@@ -50,43 +57,13 @@
         </div>
     </main>
 
-    <section class="screen bgColor sideNavRel2" id="redac">
+    <section class="screen bgColor sideNavRel2" id="createLogo">
         <div class="sideNav2">
             <a href="#leymarie"><p></p></a>
-            <a href="#redac"><p class="where"></p></a>
-            <a href="#createLogo"><p></p></a>
-            <a href="#javascript"><p></p></a>
-            <a href="#react"><p></p></a>
-        </div>
-        <div class="container">
-            <h2 class="portfolioTitles yellowFont textCenter">Rédaction du dossier Projet Leymarie</h2>
-            <div class="displayFlexBetween flexWrap">
-                <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <img class="imgResp" src="img/dossier.PNG" alt="portrait de marco da silva">
-                </div>
-                <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Préparation de la structure du dossier</p>
-                    <p>Liste des compétences couvertes</p>
-                    <p>Utilisation de l'outil photoshop pour les images</p>
-                    <p>Utilisation de l'outil <span class="yellowFont">inDesign</span> pour la rédaction</p>
-                    <p>Présentation des <span class="yellowFont">fonctionnalités et parcours utilisateur</span></p>
-                    <p>Focus sur les fonctionnalités intéressantes (code)</p>
-                    <p>Synthèse</p>
-                    <div class="btnAlign">
-                        <p class="btn"><a target="_blank" href="img/marcoDaSilvaDossier.pdf">Télécharger le dossier</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="screen bgColor2 sideNavRel2" id="createLogo">
-        <div class="sideNav2">
-            <a href="#leymarie"><p></p></a>
-            <a href="#redac"><p></p></a>
             <a href="#createLogo"><p class="where"></p></a>
             <a href="#javascript"><p></p></a>
             <a href="#react"><p></p></a>
+            <a href="#gameboard"><p></p></a>
         </div>
         <div class="container">
             <h2 class="portfolioTitles yellowFont textCenter">Création de logo</h2>
@@ -105,13 +82,13 @@
         </div>
     </section>
 
-    <section class="screen bgColor sideNavRel2" id="javascript">
+    <section class="screen bgColor2 sideNavRel2" id="javascript">
         <div class="sideNav2">
             <a href="#leymarie"><p></p></a>
-            <a href="#redac"><p></p></a>
             <a href="#createLogo"><p></p></a>
             <a href="#javascript"><p class="where"></p></a>
             <a href="#react"><p></p></a>
+            <a href="#gameboard"><p></p></a>
         </div>
         <div class="container">
             <h2 class="portfolioTitles yellowFont textCenter">Apprentissage du Javascript</h2>
@@ -120,23 +97,23 @@
                     <img class="imgResp sizeImgPort" src="img/toutjavascript.jpeg" alt="portrait de marco da silva">
                 </div>
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Achat du livre <span class="yellowFont">"TOUT JAVASCRIPT</span> par Olivier Hondermarck</p>
+                    <p>Achat du livre "<span class="yellowFont">TOUT JAVASCRIPT</span>" par Olivier Hondermarck</p>
                     <p>Lecture de chaque chapitres jusqu'à compréhension et annotations</p>
                     <p>Essais pratiques</p>
-                    <p>Envie d'appronfidessement du langage</p>
+                    <p>Envie d'approfondissement du langage</p>
                     <p>Recherche de tutos afin de mieux comprendre la mise en pratique</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="screen bgColor2 sideNavRel2" id="react">
+    <section class="screen bgColor sideNavRel2" id="react">
         <div class="sideNav2">
             <a href="#leymarie"><p></p></a>
-            <a href="#redac"><p></p></a>
             <a href="#createLogo"><p></p></a>
             <a href="#javascript"><p></p></a>
             <a href="#react"><p class="where"></p></a>
+            <a href="#gameboard"><p></p></a>
         </div>
         <div class="container">
             <h2 class="portfolioTitles yellowFont textCenter">Tuto React.js (Morpion)</h2>
@@ -156,18 +133,44 @@
     </section>
 
 
+    <section class="screen bgColor2 sideNavRel2" id="gameboard">
+        <div class="sideNav2">
+            <a href="#leymarie"><p></p></a>
+            <a href="#createLogo"><p></p></a>
+            <a href="#javascript"><p></p></a>
+            <a href="#react"><p></p></a>
+            <a href="#gameboard"><p class="where"></p></a>
+        </div>
+        <div class="container">
+            <h2 class="portfolioTitles yellowFont textCenter">Création d'un jeu de société physique et numérique (Work in Progress)</h2>
+            <div class="displayFlexBetween flexWrap">
+                <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                    <img class="imgResp sizeImgPort" src="img/theMrew.jpg" alt="portrait de marco da silva">
+                </div>
+                <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                    <p>Choix d'un gameplay</p>
+                    <p>Création d'un univers</p>
+                    <p>Choix d'une charte graphique</p>
+                    <p>Utilisation de l'outil <span class="yellowFont">illustrator</span> pour la structure des cartes</p>
+                    <p>Conception d'une carte de jeu (WIP)</p>
+                    <p>Ecriture d'un scénario à embranchements multiples (WIP)</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     
     <footer class="footer">
         <div>
             <nav class="navFooter">
                 <ul class="bDesktop3 desktop3 lDesktop3 bTablet3 tablet12 phone12">
-                    <li><a href="index.html #who">Qui suis-je ?</a></li>
-                    <li><a href="index.html #portfolio">Portfolio</a></li>
-                    <li><a href="index.html #cv">CV</a></li>
-                    <li><a href="index.html #contact"><li>Contact</a></li>
+                    <li><a href="index.html#who">Qui suis-je ?</a></li>
+                    <li><a href="index.html#portfolio">Portfolio</a></li>
+                    <li><a href="index.html#cv">CV</a></li>
+                    <li><a href="index.html#contact"><li>Contact</a></li>
                 </ul>
                 <div class="bDesktop1 desktop1 lDesktop1 bTablet1">
-                    <img class="imgResp" src="img/logoMarco.png" alt="logo du site">
+                    <a href="index.html"><img class="imgResp" src="img/logoMarco.png" alt="logo du site"></a>
                 </div>
                 <ul class="bDesktop3 desktop3 lDesktop3 bTablet3 tablet12 phone12">
                     <li><a href="legal.html">Mentions Légales</a></li>
@@ -179,10 +182,10 @@
 
     <div class="menuResp">
         <ul class="clic">
-            <li><a href="index.html #who">Qui suis-je ?</a></li>
-            <li><a href="index.html #portfolio">Projets</a></li>
-            <li><a href="index.html #cv">CV</a></li>
-            <li><a href="index.html #contact">Contact</a></li>
+            <li><a href="index.html#who">Qui suis-je ?</a></li>
+            <li><a href="index.html#portfolio">Projets</a></li>
+            <li><a href="index.html#cv">CV</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
             <li><a class="yellowFont" href="tel:0628542231">Téléphoner</a></li>
             <li><a class="yellowFont" href="mailto:tdasilva.marco@gmail.com">Envoyer un mail</a></li>
             <li><a href="legal.html">Mentions légales</a></li>
