--- a/legal.html
+++ b/legal.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="Développeur Web et web Mobile junior en recherche d'alternance Bachelor 3 à l'Epsi">
+    <meta property="og:image" content="http://www.marcodasilva-dev.com/img/logo.png" />
+    <link rel="icon" type="image/png" href="img/logo.png" />
     <link type="text/css" href="styles/style.css" rel="stylesheet">
-    <title>Projets</title>
+    <title>Mentions légales</title>
 </head>
 <body class="body">
     <header id="haut">
@@ -13,11 +16,11 @@
                 <img class="burgerPng imgResp" src="img/burger.png" alt="icône menu burger">
             </div>
             <ul class="tablet3 phone3">
-                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html #who">Qui suis-je ?</a></li>
-                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html #portfolio">Projets</a></li>
+                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html#who">Qui suis-je ?</a></li>
+                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html#portfolio">Projets</a></li>
                 <li class="bDesktop1 desktop1 lDesktop1 bTablet2 tablet12"><a href="index.html"><img class="imgResp" src="img/logo.png" alt="logo du site"></a></li>
-                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html #cv">CV</a></li>
-                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html #contact">Contact</a></li>
+                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html#cv">CV</a></li>
+                <li class="bDesktop2 desktop2 lDesktop2 bTablet2"><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -91,13 +94,13 @@
         <div>
             <nav class="navFooter">
                 <ul class="bDesktop3 desktop3 lDesktop3 bTablet3 tablet12 phone12">
-                    <li><a href="index.html #who">Qui suis-je ?</a></li>
-                    <li><a href="index.html #portfolio">Portfolio</a></li>
-                    <li><a href="index.html #cv">CV</a></li>
-                    <li><a href="index.html #contact"><li>Contact</a></li>
+                    <li><a href="index.html#who">Qui suis-je ?</a></li>
+                    <li><a href="index.html#portfolio">Portfolio</a></li>
+                    <li><a href="index.html#cv">CV</a></li>
+                    <li><a href="index.html#contact"><li>Contact</a></li>
                 </ul>
                 <div class="bDesktop1 desktop1 lDesktop1 bTablet1">
-                    <img class="imgResp" src="img/logoMarco.png" alt="logo du site">
+                    <a href="index.html"><img class="imgResp" src="img/logoMarco.png" alt="logo du site"></a>
                 </div>
                 <ul class="bDesktop3 desktop3 lDesktop3 bTablet3 tablet12 phone12">
                     <li><a href="">Mentions Légales</a></li>
@@ -109,13 +112,13 @@
 
     <div class="menuResp">
         <ul class="clic">
-            <li><a href="index.html #who">Qui suis-je ?</a></li>
-            <li><a href="index.html #portfolio">Projets</a></li>
-            <li><a href="index.html #cv">CV</a></li>
-            <li><a href="index.html #contact">Contact</a></li>
+            <li><a href="index.html#who">Qui suis-je ?</a></li>
+            <li><a href="index.html#portfolio">Projets</a></li>
+            <li><a href="index.html#cv">CV</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
             <li><a class="yellowFont" href="tel:0628542231">Téléphoner</a></li>
             <li><a class="yellowFont" href="mailto:tdasilva.marco@gmail.com">Envoyer un mail</a></li>
-            <li><a href="mentions.html">Mentions légales</a></li>
+            <li><a href="legal.html">Mentions légales</a></li>
         </ul>
     </div>
     <script type="text/javascript" src="scripts/portfolio.js"></script>
